# de-dolby

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
de_dolby/: __main__.py  batch.py  cli.py  codecs.py  config.py  display.py  estimate.py  metadata.py  options.py  pipeline.py  probe.py  progress.py  settings.py  state.py  tools.py  tracks.py  utils.py  validate.py  watch.py
tests/: test_batch.py  test_cli.py  test_codecs.py  test_config.py  test_metadata.py  test_pipeline.py  test_probe.py  test_settings.py  test_state.py  test_tools.py  test_tracks.py  test_validate.py  test_watch.py
